Fri Aug 26 14:52:09 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/MessengerSplit/MessengerTopics.codegen:
        * tools/modeling/tests/MessengerSplit/MessengerTopics.opendds:

          Add missing codegen file.  
          Fix model name in model.

Thu Aug 25 23:30:25 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:

          Cleaned up extra whitespace.

        * tests/DCPS/BuiltInTopicTest/BuiltInTopicTest.mpc:

          Marked the subscriber as requiring built_in_topics

        * tests/DCPS/BuiltInTopicTest/DataReaderListener.cpp:

          Removed unnecessary constructor call.

Thu Aug 25 18:55:47 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/preprocess.xsl:
        * tools/modeling/tests/MessengerSplit/MessengerSplit.opendds:
        * tools/modeling/tests/MessengerSplit/MessengerTopics.opendds:

          Fix and test case for RT14906 Support transitive topic references
          in same directory.

Wed Aug 24 22:29:27 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:
        * dds/InfoRepo/DCPS_IR_Participant.cpp:
        * dds/InfoRepo/DCPS_IR_Topic.cpp:
        * dds/InfoRepo/DCPS_IR_Topic.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:

          Added reassociation of built in topic datawriters and datareaders
          for reincarnating InfoRepo with persistence.

        * tests/DCPS/BuiltInTopicTest/DataReaderListener.cpp:
        * tests/DCPS/BuiltInTopicTest/DataReaderListener.h:
        * tests/DCPS/BuiltInTopicTest/prst_repo_run_test.pl:
        * tests/DCPS/BuiltInTopicTest/subscriber.cpp:

          Changed test to detect missing bit connection after a persistent
          restart of the InfoRepo.

Mon Aug 22 19:01:52 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
