@@ -1,9 +1,16 @@
+Mon Aug 29 14:31:14 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * tests/DCPS/ConfigTransports/Puller.cpp:
+        * tests/DCPS/ConfigTransports/common.cpp:
+
+          Fixed warnings.
+
 Fri Aug 26 14:52:09 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
 
         * tools/modeling/tests/MessengerSplit/MessengerTopics.codegen:
         * tools/modeling/tests/MessengerSplit/MessengerTopics.opendds:
 
-          Add missing codegen file.  
+          Add missing codegen file.
           Fix model name in model.
 
 Thu Aug 25 23:30:25 UTC 2011  Trevor Fields  <fields_t@ociweb.com>
